vlib/v/parser/tests/fn_decl_return_type_err_a.out
vlib/v/parser/tests/fn_decl_return_type_err_a.vv:3:13: error: cannot use `mut` in fn return parameter
    1 | struct Foo{}
    2 |
    3 | fn maker() ?mut Foo {
      |             ~~~
    4 |     inner := &Foo{}
    5 |     return *inner
